bibtex como backend de biblatex. Ref. CMSAF

--- a/libro/ESF.tex
+++ b/libro/ESF.tex
@@ -32,10 +32,10 @@
 \include{Creditos}
 
 \tableofcontents
-\clearpage
-\listoffigures*
-\clearpage
-\listoftables*
+% \clearpage
+% \listoffigures*
+% \clearpage
+% \listoftables*
 
 \printnomenclature{}
 
@@ -82,6 +82,6 @@
 
 %%\bibliographystyle{flexbib}
 %%\bibliography{../biblio}
-
+\printbibliography
 
 \end{document}
