--- a/libro/RadiacionSolar.tex
+++ b/libro/RadiacionSolar.tex
@@ -987,7 +987,7 @@ detalla el cálculo de radiación efectiva para sistemas estáticos, con
 seguimiento de eje horizontal Norte-Sur y sistemas de seguimiento de
 doble eje usando datos de estaciones meteorológicas de la red
 SIAR\cite{SIAR2011} y estimaciones a partir de imágenes de satélite
-proporcionadas por el servicio CM~SAF\cite{CMSAF2011}.
+proporcionadas por el servicio CM~SAF\cite{Posselt.Muller.ea2011}.
 
 Las figuras \ref{fig:MapasRadiacion}, \ref{fig:ComparativaRadiación} y
 \ref{fig:HistComparativaRadiación} adaptadas del documento citado,
@@ -1033,7 +1033,7 @@ los mapas.
   estáticos, por sistemas de seguimiento con eje horizontal Norte-Sur
   y con seguimiento a doble eje. Los cálculos han sido realizados a
   partir de las bases de radiación SIAR \cite{SIAR2011} y CM~SAF
-  \cite{CMSAF2011} según se detalla en
+  \cite{Posselt.Muller.ea2011} según se detalla en
   \cite{Antonanzas-Torres.Canizares.ea2013}.}
 \label{fig:MapasRadiacion}
 \end{figure}
