--- a/libro/preambulo.tex
+++ b/libro/preambulo.tex
@@ -52,7 +52,7 @@
 \feetbelowfloat
 
 
-\usepackage[citestyle=authoryear,bibstyle=authoryear,doi=true,url=true]{biblatex}
+\usepackage[citestyle=authoryear, backend=bibtex, bibstyle=authoryear, doi=true, url=true]{biblatex}
 \addbibresource{../biblio.bib}
 \let\cite\parencite
 
@@ -62,7 +62,7 @@
 	\phantomsection
 	\addcontentsline{toc}{chapter}{\bibname}
 	\prebibhook}
-\renewcommand{\bbltechreport}{Informe T\'ecnico}
+% \renewcommand{\bbltechreport}{Informe T\'ecnico}
 
 \usepackage{hyperref}
 
