Mejoro apariencia biblatex

--- a/biblio.bib
+++ b/biblio.bib
@@ -8092,15 +8092,12 @@
 }
 
 @PhdThesis{Munoz2004,
-  Title                    = {Recomendaciones sobre el uso de corriente alterna en la electrificación rural fotovoltaica},
-  Author                   = {Muñoz, J.},
-  School                   = {IES-UPM},
-  Year                     = {2004},
-
-  File                     = {Munoz2004.pdf:Munoz2004.pdf:PDF},
-  Owner                    = {oscar},
-  Refid                    = {Muñoz2004},
-  Timestamp                = {13.03.2010}
+  Title =	 {Recomendaciones sobre el uso de corriente alterna en
+                  la electrificación rural fotovoltaica},
+  Author =	 {Munoz, Javier},
+  School =	 {IES-UPM},
+  Year =	 2004,
+  File =	 {Munoz2004.pdf:Munoz2004.pdf:PDF}
 }
 
 @Article{Munoz.Lorenzo2006,
@@ -8115,7 +8112,6 @@
   File =	 {Munoz.Lorenzo2006.pdf:Munoz.Lorenzo2006.pdf:PDF},
   Owner =	 {oscar},
   Url =		 {oa.upm.es/13945/},
-  Refid =	 {Muñoz.Lorenzo2006},
   Timestamp =	 {13.03.2010}
 }
 
@@ -8128,7 +8124,6 @@
   File                     = {Munoz.Lorenzo2001.pdf:Munoz.Lorenzo2001.pdf:PDF},
   Keywords                 = {inverters, stand-alone PV systems, standard},
   Owner                    = {oscar},
-  Refid                    = {Muñoz.Lorenzo2001},
   Timestamp                = {13.03.2010}
 }
 
@@ -8143,7 +8138,6 @@
   File                     = {Munoz.Lorenzo.ea2008.pdf:Munoz.Lorenzo.ea2008.pdf:PDF},
   Keywords                 = {azimuthal one-axis tracking, grid-connection, hot-spot},
   Owner                    = {oscar},
-  Refid                    = {Muñoz.Lorenzo.ea2008},
   Timestamp                = {13.03.2010}
 }
 
@@ -8179,7 +8173,6 @@
   Keywords                 = {energy, grid connected, PV plant},
   Owner                    = {oscar},
   Publisher                = {IES-UPM},
-  Refid                    = {Muñoz.Narvarte.ea2008},
   Timestamp                = {13.03.2010}
 }
 
@@ -8316,7 +8309,6 @@
   File                     = {Narvarte.Munoz.ea2001.pdf:Narvarte.Munoz.ea2001.pdf:PDF},
   ISSN                     = {1099-159X},
   Owner                    = {oscar},
-  Refid                    = {Narvarte.Muñoz.ea2001},
   Timestamp                = {13.03.2010}
 }
 
@@ -8717,7 +8709,6 @@
   File                     = {Ortega.Castaner2008.pdf:Ortega.Castaner2008.pdf:PDF},
   ISSN                     = {1099-159X},
   Owner                    = {oscar},
-  Refid                    = {Ortega.Castañer2008},
   Timestamp                = {13.03.2010}
 }
 
