Elimino párrafo sobre potencia instalada en Intro

--- a/libro/Introduccion.tex
+++ b/libro/Introduccion.tex
@@ -146,23 +146,20 @@ y la desalinización del agua extraída con sistemas de ósmosis inversa.
 }
 
 \caption{Sistemas fotovoltaicos autónomos de electrificación rural.}
-
-
-
 \end{figure}
 
 
-Según el informe \emph{Global Market Outlook for Photovoltaics until
-2016} de la \emph{European Photovoltaics Industry Association}
-\cite{EPIA2012} la potencia fotovoltaica instalada en el planeta
-al finalizar el 2011 era superior a los 69 GW. Europa es la región
-que lidera el sector, con más de 51 GW instalados en 2011, lo que
-representa alrededor del 75\% de la potencia total mundial. A
-continuación destacan Japón con 5 GW, Estados Unidos con 4.4 GW, y
-China con 3.1 GW. A pesar de que es muy difícil establecer
-cifras fiables de la potencia instalada en sistemas autónomos, no
-hay duda de que una proporción muy alta se debe a sistemas conectados
-a red. 
+% Según el informe \emph{Global Market Outlook for Photovoltaics until
+% 2016} de la \emph{European Photovoltaics Industry Association}
+% \cite{EPIA2012} la potencia fotovoltaica instalada en el planeta
+% al finalizar el 2011 era superior a los 69 GW. Europa es la región
+% que lidera el sector, con más de 51 GW instalados en 2011, lo que
+% representa alrededor del 75\% de la potencia total mundial. A
+% continuación destacan Japón con 5 GW, Estados Unidos con 4.4 GW, y
+% China con 3.1 GW. A pesar de que es muy difícil establecer
+% cifras fiables de la potencia instalada en sistemas autónomos, no
+% hay duda de que una proporción muy alta se debe a sistemas conectados
+% a red. 
 
 %%% Local Variables:
 %%% mode: LaTex
