Actualizo fecha y edición

--- a/libro/Licencia.tex
+++ b/libro/Licencia.tex
@@ -3,11 +3,11 @@
 }
 \rule[.5ex]{\linewidth}{1pt} 
 
-Versión 1.6 Diciembre de 2013
+Versión 1.7 Mayo de 2014
 
-© 2013, 2012, 2011, 2010, 2009 Oscar Perpiñán Lamigueiro
+© 2014, 2013, 2012, 2011, 2010, 2009 Oscar Perpiñán Lamigueiro
 
-Este documento está accesible en \url{http://procomun.wordpress.com/documentos/libroesf}
+Este documento está accesible en \url{https://github.com/oscarperpinan/esf}
 
 \begin{center}
 \includegraphics[scale=0.5]{../figs/cc-logo}
