Corrijo error de unidades en definiciones previas de SFER

--- a/libro/SFER.tex
+++ b/libro/SFER.tex
@@ -134,11 +134,11 @@ Habitualmente, la documentación técnica de los fabricantes incluye la
 capacidad a $C_{10}$. Sin embargo, los regímenes de funcionamiento más
 habituales en los sistemas fotovoltaicos son del orden de
 $C_{100}$. Como regla aproximada puede emplearse la relación $C_{100}
-\simeq 1.35 \cdot C_{10}$. Es importante resaltar que, debido a esta relación, la corriente $I_{10}$
+\simeq 1.35 \cdot C_{10}$. Es importante resaltar que, debido a esta relación, la corriente $I_{100}$
 correspondiente a $C_{100}$, no equivale a $0.1 \cdot I_{10}$. En el
 caso anterior, con $C_{10}=\SI{300}{\ampere\hour}$,
 $I_{10}=\SI{30}{\ampere}$, y como $C_{100}\simeq
-\SI{405}{\ampere\hour}$, obtenemos $I_{100}=\SI{4.05}{\hour}$.
+\SI{405}{\ampere\hour}$, obtenemos $I_{100}=\SI{4.05}{\ampere}$.
 %OJO: capitulo de Sauer en Luque&Hegedus
 
 % Para relacionar la capacidad a diferentes regímenes de carga es útil
