logoEOI en FormatoEOI

--- a/diapos/FormatoEOI.tex
+++ b/diapos/FormatoEOI.tex
@@ -58,7 +58,7 @@
 
 
 
-\logo{\includegraphics[width=1.5cm]{../Figuras/logoEOI.jpg}}
+\logo{\includegraphics[width=1.5cm]{../figs/logoEOI.jpg}}
 
 \useinnertheme[shadow=true]{rounded}
 \useoutertheme{shadow}
