figs en lugar de Figuras en Electrotecnia

--- a/diapos/Electrotecnia.tex
+++ b/diapos/Electrotecnia.tex
@@ -71,7 +71,7 @@
   \frametitle{Sistema de suministro eléctrico}
 
   \begin{center}
-    \includegraphics[scale=0.5]{../Figuras/Figuras_Externas/Redelectrica2}
+    \includegraphics[scale=0.5]{../figs/Redelectrica2}
     \par\end{center}
 
 
@@ -162,7 +162,7 @@
     ($p(t)>0$)
   \end{description}
   \begin{center}
-    \includegraphics{../Figuras/ReceptorPasivo}
+    \includegraphics{../figs/ReceptorPasivo}
     \par\end{center}
 
 
@@ -216,7 +216,7 @@
     \end{itemize}
   \end{itemize}
   \begin{center}
-    \includegraphics{../Figuras/GeneradorTension}
+    \includegraphics{../figs/GeneradorTension}
     \par\end{center}
   \begin{itemize}
   \item \textbf{Generador de corriente}: su corriente es independiente
@@ -227,7 +227,7 @@
     \end{itemize}
   \end{itemize}
   \begin{center}
-    \includegraphics{../Figuras/GeneradorCorriente}
+    \includegraphics{../figs/GeneradorCorriente}
     \par\end{center}
 
 
@@ -247,7 +247,7 @@
     abierto: resistencia infinita (corriente nula).
   \end{itemize}
   \begin{center}
-    \includegraphics{../Figuras/Resistencia}
+    \includegraphics{../figs/Resistencia}
     \par\end{center}
 
 
@@ -270,7 +270,7 @@
   \item En circuitos de corriente continua es un cortocircuito.
   \end{itemize}
   \begin{center}
-    \includegraphics{../Figuras/Bobina}
+    \includegraphics{../figs/Bobina}
     \par\end{center}
 
 
@@ -291,7 +291,7 @@
 
   \end{itemize}
   \begin{center}
-    \includegraphics{../Figuras/Condensador}
+    \includegraphics{../figs/Condensador}
     \par\end{center}
 
 
@@ -333,7 +333,7 @@
     \end{itemize}
   \end{itemize}
   \begin{center}
-    \includegraphics{../Figuras/Diodo}
+    \includegraphics{../figs/Diodo}
     \par\end{center}
 
 
@@ -367,7 +367,7 @@
 
 
     \begin{center}
-      \includegraphics{../Figuras/Transistor}
+      \includegraphics{../figs/Transistor}
       \par\end{center}
 
   \end{columns}%{}
@@ -402,7 +402,7 @@
 
 
     \begin{center}
-      \includegraphics{../Figuras/AsociacionSerie}
+      \includegraphics{../figs/AsociacionSerie}
       \par\end{center}
 
   \end{columns}%{}
@@ -433,7 +433,7 @@
 
 
     \begin{center}
-      \includegraphics{../Figuras/AsociacionParalelo}
+      \includegraphics{../figs/AsociacionParalelo}
       \par\end{center}
 
   \end{columns}%{}
@@ -481,7 +481,7 @@ y(t)=Y_{m}\cdot\cos(\omega\cdot t+\varphi)
 
 
 \begin{center}
-  \includegraphics{../Figuras/Sin}
+  \includegraphics{../figs/Sin}
   \par\end{center}
 
 
@@ -530,7 +530,7 @@ y(t)=Y_{m}\cdot\cos(\omega\cdot t+\varphi)
 
 
 \begin{center}
-  \includegraphics{../Figuras/Fasor}
+  \includegraphics{../figs/Fasor}
   \par\end{center}
 
 
@@ -567,7 +567,7 @@ e^{j(\phi_{V}-\phi_{Z})}=I\cdot e^{j\phi_{I}}
 
 
 \begin{center}
-  \includegraphics{../Figuras/Impedancia}
+  \includegraphics{../figs/Impedancia}
   \par\end{center}
 
 
@@ -593,7 +593,7 @@ e^{j(\phi_{V}-\phi_{Z})}=I\cdot e^{j\phi_{I}}
   \frametitle{Circuito Capacitivo puro}
 
   \begin{center}
-    \includegraphics{../Figuras/PlotCircuitoCapacitivoPuro}
+    \includegraphics{../figs/PlotCircuitoCapacitivoPuro}
     \par\end{center}
 
 
@@ -602,7 +602,7 @@ e^{j(\phi_{V}-\phi_{Z})}=I\cdot e^{j\phi_{I}}
   \frametitle{Circuito Inductivo puro}
 
   \begin{center}
-    \includegraphics{../Figuras/PlotCircuitoInductivoPuro}
+    \includegraphics{../figs/PlotCircuitoInductivoPuro}
     \par\end{center}
 
 
@@ -611,7 +611,7 @@ e^{j(\phi_{V}-\phi_{Z})}=I\cdot e^{j\phi_{I}}
   \frametitle{Circuito Capacitivo}
 
   \begin{center}
-    \includegraphics{../Figuras/PlotCircuitoCapacitivo}
+    \includegraphics{../figs/PlotCircuitoCapacitivo}
     \par\end{center}
 
 
@@ -620,7 +620,7 @@ e^{j(\phi_{V}-\phi_{Z})}=I\cdot e^{j\phi_{I}}
   \frametitle{Circuito Inductivo}
 
   \begin{center}
-    \includegraphics{../Figuras/PlotCircuitoInductivo}
+    \includegraphics{../figs/PlotCircuitoInductivo}
     \par\end{center}
 
 
@@ -635,7 +635,7 @@ e^{j(\phi_{V}-\phi_{Z})}=I\cdot e^{j\phi_{I}}
   \framesubtitle{Potencia}
 
   \begin{center}
-    \includegraphics{../Figuras/PlotCircuitoCapacitivoPuro_Potencia}
+    \includegraphics{../figs/PlotCircuitoCapacitivoPuro_Potencia}
     \par\end{center}
 
 
@@ -647,7 +647,7 @@ e^{j(\phi_{V}-\phi_{Z})}=I\cdot e^{j\phi_{I}}
   \framesubtitle{Potencia}
 
   \begin{center}
-    \includegraphics{../Figuras/PlotCircuitoInductivoPuro_Potencia}
+    \includegraphics{../figs/PlotCircuitoInductivoPuro_Potencia}
     \par\end{center}
 
 
@@ -659,7 +659,7 @@ e^{j(\phi_{V}-\phi_{Z})}=I\cdot e^{j\phi_{I}}
   \framesubtitle{Potencia}
 
   \begin{center}
-    \includegraphics[scale=0.8]{../Figuras/PlotCircuitoCapacitivo_Potencia}
+    \includegraphics[scale=0.8]{../figs/PlotCircuitoCapacitivo_Potencia}
     \par\end{center}
 
 
@@ -671,7 +671,7 @@ e^{j(\phi_{V}-\phi_{Z})}=I\cdot e^{j\phi_{I}}
   \framesubtitle{Potencia}
 
   \begin{center}
-    \includegraphics[scale=0.8]{../Figuras/PlotCircuitoInductivo_Potencia}
+    \includegraphics[scale=0.8]{../figs/PlotCircuitoInductivo_Potencia}
     \par\end{center}
 
 
@@ -780,7 +780,7 @@ activa).
   \frametitle{Generación de un sistema trifásico}
 
   \begin{center}
-    \includegraphics{../Figuras/TensionesTrifasica}
+    \includegraphics{../figs/TensionesTrifasica}
     \par\end{center}
 
 
@@ -802,7 +802,7 @@ activa).
       \[
       P=3\cdot V_{F}I_{F}\cos(\phi)=\sqrt{3}V_{L}I_{L}\cos(\phi)
       \]
-      \includegraphics[scale=0.75]{../Figuras/RedTrifasicaEstrella}
+      \includegraphics[scale=0.75]{../figs/RedTrifasicaEstrella}
       \par\end{center}
 
   \end{block}
@@ -825,7 +825,7 @@ activa).
       \[
       P=3\cdot V_{F}I_{F}\cos(\phi)=\sqrt{3}V_{L}I_{L}\cos(\phi)
       \]
-      \includegraphics[scale=0.75]{../Figuras/RedTrifasicaEstrella_CargaMonofasica}
+      \includegraphics[scale=0.75]{../figs/RedTrifasicaEstrella_CargaMonofasica}
       \par\end{center}
 
   \end{block}
@@ -848,7 +848,7 @@ activa).
       \[
       P=3\cdot V_{F}\cdot I_{F}\cos(\phi)=\sqrt{3}V_{L}I_{L}\cos(\phi)
       \]
-      \includegraphics[scale=0.75]{../Figuras/RedTrifasicaEstrella_CargaTriangulo}
+      \includegraphics[scale=0.75]{../figs/RedTrifasicaEstrella_CargaTriangulo}
       \par\end{center}
 
   \end{block}
@@ -871,7 +871,7 @@ activa).
       \[
       P=3\cdot V_{F}\cdot I_{F}\cos(\phi)=\sqrt{3}V_{L}I_{L}\cos(\phi)
       \]
-      \includegraphics{../Figuras/RedTrifasicaTriangulo}
+      \includegraphics{../figs/RedTrifasicaTriangulo}
       \par\end{center}
 
   \end{block}
@@ -891,7 +891,7 @@ activa).
     movimiento.  (Fuerza de Lorentz)
   \end{itemize}
   \begin{center}
-    \includegraphics[scale=0.5]{../Figuras/Figuras_Externas/Magnet0873}
+    \includegraphics[scale=0.5]{../figs/Magnet0873}
     \par\end{center}
 
 
@@ -903,7 +903,7 @@ activa).
     conductor.  (Oersted, Biot-Savart)
   \end{itemize}
   \begin{center}
-    \includegraphics[scale=0.45]{../Figuras/Figuras_Externas/Solenoide}
+    \includegraphics[scale=0.45]{../figs/Solenoide}
     \par\end{center}
 
 
@@ -917,7 +917,7 @@ activa).
     Ampere)
   \end{itemize}
   \begin{center}
-    \includegraphics[scale=0.3]{../Figuras/Figuras_Externas/FuerzasRepulsion}
+    \includegraphics[scale=0.3]{../figs/FuerzasRepulsion}
     \par\end{center}
   \begin{block} {}
     \centering Video:
@@ -958,7 +958,7 @@ activa).
   \frametitle{Electromagnetismo}
 
   \begin{center}
-    \includegraphics[scale=0.4]{../Figuras/Figuras_Externas/Electric_motor_cycle_3}
+    \includegraphics[scale=0.4]{../figs/Electric_motor_cycle_3}
     \par\end{center}
 
 
@@ -1070,7 +1070,7 @@ N_{s}\cdot I_{s}=N_{p}\cdot I_{p}
 
 
 \begin{center}
-  \includegraphics[scale=0.9]{../Figuras/Transformador2}
+  \includegraphics[scale=0.9]{../figs/Transformador2}
   \par\end{center}
 
 
@@ -1085,7 +1085,7 @@ N_{s}\cdot I_{s}=N_{p}\cdot I_{p}
     sube tensión ($V_{s}>V_{p}$) y reduce corriente ($I_{s}<I_{p}$).
   \end{itemize}
   \begin{center}
-    \includegraphics{../Figuras/Transformador}
+    \includegraphics{../figs/Transformador}
     \par\end{center}
 
 
@@ -1286,7 +1286,7 @@ N_{s}\cdot I_{s}=N_{p}\cdot I_{p}
   \frametitle{Interruptor Magnetotérmico}
 
   \begin{center}
-    \includegraphics[scale=0.3]{../Figuras/Figuras_Externas/SeccionMagnetotermico}
+    \includegraphics[scale=0.3]{../figs/SeccionMagnetotermico}
     \par\end{center}
 
 
@@ -1315,7 +1315,7 @@ N_{s}\cdot I_{s}=N_{p}\cdot I_{p}
 
 
     \begin{center}
-      \includegraphics[scale=0.45]{../Figuras/Figuras_Externas/InterruptorDiferencial}
+      \includegraphics[scale=0.45]{../figs/InterruptorDiferencial}
       \par\end{center}
 
 
@@ -1323,7 +1323,7 @@ N_{s}\cdot I_{s}=N_{p}\cdot I_{p}
 
 
     \begin{center}
-      \includegraphics[scale=0.4]{../Figuras/Figuras_Externas/ResidualCurrentCircuitBreak}
+      \includegraphics[scale=0.4]{../figs/ResidualCurrentCircuitBreak}
       \par\end{center}
 
   \end{columns}%{}
@@ -1358,7 +1358,7 @@ N_{s}\cdot I_{s}=N_{p}\cdot I_{p}
   \frametitle{Armónicos}
 
   \begin{center}
-    \includegraphics{../Figuras/Armonicos}
+    \includegraphics{../figs/Armonicos}
     \par\end{center}
 
 
